@@ -1,0 +1,4 @@
+# Modify default key bindings
+
+K		useitem			1100	# Use keyring
+Alt-K	try_keys
